--- a/mandatory_exercise_02/app/src/main/res/layout/activity_sections.xml
+++ b/mandatory_exercise_02/app/src/main/res/layout/activity_sections.xml
@@ -7,4 +7,40 @@
     android:layout_height="match_parent"
     tools:context=".SectionsActivity">
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/background_lifeify" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/icon_v1" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView"
+
+    android:name="edu.urv.lifeify.SectionsFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="10dp"
+
+        app:layout_constraintTop_toBottomOf="@+id/imageView6"
+
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
