--- a/mandatory_exercise_02/app/src/main/res/layout/activity_sections.xml
+++ b/mandatory_exercise_02/app/src/main/res/layout/activity_sections.xml
@@ -5,18 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_lifeify"
     tools:context=".SectionsActivity">
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/background_lifeify" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -31,16 +21,16 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
 
-    android:name="edu.urv.lifeify.SectionsFragment"
+        android:name="edu.urv.lifeify.SectionsFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="10dp"
 
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="10dp"
 
         app:layout_constraintTop_toBottomOf="@+id/imageView6"
 
-    />
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
