--- a/mandatory_exercise_02/app/src/main/res/layout/activity_objectives.xml
+++ b/mandatory_exercise_02/app/src/main/res/layout/activity_objectives.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/objectives"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_lifeify"
@@ -41,8 +41,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageLogo" />
-    tools:layout="@layout/objectives_item_list"
-        tools:layout_editor_absoluteY="7dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
