--- a/mandatory_exercise_02/app/src/main/res/layout/activity_objectives.xml
+++ b/mandatory_exercise_02/app/src/main/res/layout/activity_objectives.xml
@@ -13,7 +13,7 @@
         android:id="@+id/btnExit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.046"
